@@ -1027,9 +1027,9 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
 
             long seqno = ack.getSeqno();
             // processes response status from datanodes.
-            for (int i = ack.getNumOfReplies() - 1;
-                 i >= 0 && dfsClient.clientRunning; i--) {
-              final Status reply = ack.getReply(i);
+            for (int i = ack.getNumOfReplies()-1; i >=0  && dfsClient.clientRunning; i--) {
+              final Status reply = PipelineAck.getStatusFromHeader(ack
+                .getReply(i));
               // Restart will not be treated differently unless it is
               // the local node or the only one in the pipeline.
               if (PipelineAck.isRestartOOBStatus(reply) &&
