@@ -168,7 +168,9 @@ public class TestDataTransferProtocol {
 
     //ok finally write a block with 0 len
     sendResponse(Status.SUCCESS, "", null, recvOut);
-    new PipelineAck(100, new Status[]{Status.SUCCESS}).write(recvOut);
+    new PipelineAck(100, new int[] {PipelineAck.combineHeader
+      (PipelineAck.ECN.DISABLED, Status.SUCCESS)}).write
+      (recvOut);
     sendRecvData(description, false);
   }
   
@@ -400,7 +402,8 @@ public class TestDataTransferProtocol {
       hdr.write(sendOut);
 
       sendResponse(Status.SUCCESS, "", null, recvOut);
-      new PipelineAck(100, new Status[]{Status.ERROR}).write(recvOut);
+      new PipelineAck(100, new int[] {PipelineAck.combineHeader
+        (PipelineAck.ECN.DISABLED, Status.ERROR)}).write(recvOut);
       sendRecvData("negative DATA_CHUNK len while writing block " + newBlockId,
           true);
 
@@ -420,7 +423,9 @@ public class TestDataTransferProtocol {
       sendOut.flush();
       //ok finally write a block with 0 len
       sendResponse(Status.SUCCESS, "", null, recvOut);
-      new PipelineAck(100, new Status[]{Status.SUCCESS}).write(recvOut);
+      new PipelineAck(100, new int[] {PipelineAck.combineHeader
+        (PipelineAck.ECN.DISABLED, Status.SUCCESS)}).write
+        (recvOut);
       sendRecvData("Writing a zero len block blockid " + newBlockId, false);
     
     /* Test OP_READ_BLOCK */
